tests/fixtures/invalid/bool_floordiv_dict.py
# Cannot floor divide Bool and Dict[str, int]
x: bool = True // {"a": 1}
